<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:spr="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:baselineAligned="false"
              android:gravity="start"
              android:weightSum="7"
              android:orientation="horizontal"
              android:paddingBottom="2dp"
              android:paddingTop="2dp">

    <FrameLayout
        android:id="@+id/richtext_todoBtn"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginStart="3dp"
        android:layout_weight="1"
        android:background="@android:color/transparent"
        android:contentDescription="@string/composer_todo">
        <ImageButton
            android:id="@+id/rich_todo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_weight="1"
            android:background="@drawable/ripple_effect_rect"
            android:clickable="false"
            android:contentDescription="@string/composer_todo"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:scaleType="fitCenter"
            android:src="@drawable/note_richtext_toolbar_ic_checkbox"
            android:tint="@color/rich_text_toolbar_image"/>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/richtext_numberBtn"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginStart="3dp"
        android:layout_weight="1"
        android:background="@android:color/transparent"
        android:contentDescription="@string/composer_numbering">
        <ImageButton
            android:id="@+id/rich_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_weight="1"
            android:background="@drawable/ripple_effect_rect"
            android:clickable="false"
            android:contentDescription="@string/composer_numbering"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:scaleType="fitCenter"
            android:src="@drawable/email_edit_ic_numbering"
            android:tint="@color/rich_text_toolbar_image"/>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/richtext_bulletBtn"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginStart="3dp"
        android:layout_weight="1"
        android:background="@android:color/transparent"
        android:contentDescription="@string/composer_bullets">
        <ImageButton
            android:id="@+id/rich_bullet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_weight="1"
            android:background="@drawable/ripple_effect_rect"
            android:clickable="false"
            android:contentDescription="@string/composer_bullets"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:scaleType="fitCenter"
            android:src="@drawable/email_edit_ic_bullert_point"
            android:tint="@color/rich_text_toolbar_image"/>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/richtext_boldBtn"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginStart="3dp"
        android:layout_weight="1"
        android:background="@android:color/transparent"
        android:contentDescription="@string/composer_bold">

        <ImageButton
            android:id="@+id/rich_bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_weight="1"
            android:background="@drawable/ripple_effect_rect"
            android:clickable="false"
            android:contentDescription="@string/composer_bold"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:scaleType="fitCenter"
            android:src="@drawable/email_edit_ic_bold"
            android:tint="@color/rich_text_toolbar_image"/>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/richtext_italicBtn"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginStart="3dp"
        android:layout_weight="1"
        android:background="@android:color/transparent"
        android:contentDescription="@string/composer_italic">

        <ImageButton
            android:id="@+id/rich_italic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_weight="1"
            android:background="@drawable/ripple_effect_rect"
            android:clickable="false"
            android:contentDescription="@string/composer_italic"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:scaleType="fitCenter"
            android:src="@drawable/email_edit_ic_italic"
            android:tint="@color/rich_text_toolbar_image"/>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/richtext_underlineBtn"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginStart="3dp"
        android:layout_weight="1"
        android:background="@android:color/transparent"
        android:contentDescription="@string/composer_underline">

        <ImageButton
            android:id="@+id/rich_underline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_weight="1"
            android:background="@drawable/ripple_effect_rect"
            android:clickable="false"
            android:contentDescription="@string/composer_underline"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:scaleType="fitCenter"
            android:src="@drawable/email_edit_ic_underline"
            android:tint="@color/rich_text_toolbar_image"/>

    </FrameLayout>

    <FrameLayout
        android:id="@+id/richtext_textColorBtn"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginStart="3dp"
        android:layout_weight="1"
        android:background="@android:color/transparent"
        android:contentDescription="@string/composer_font_color">


        <ImageButton
            android:id="@+id/rich_fontcolor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="top"
            android:layout_weight="1"
            android:background="@drawable/ripple_effect_rect"
            android:clickable="false"
            android:contentDescription="@string/composer_font_color"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:scaleType="fitCenter"
            android:src="@drawable/email_edit_ic_font_color"
            android:tint="@color/rich_text_toolbar_image"/>

        <LinearLayout
            android:layout_width="15dp"
            android:layout_height="3dp"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:layout_gravity="center|bottom"
            android:layout_marginBottom="6dp"
            android:background="#747474">

            <View
                android:id="@+id/richtext_textColor"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="2px"
                android:background="#000000"
                android:clickable="false"
                android:focusable="false"/>
        </LinearLayout>
    </FrameLayout>
</LinearLayout>